<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="package_description">Every Android application published on Google Play has a unique package id. So before creating a new application one should check if the package name is available. This screen helps you to check if your package name is free to use.</string>
    <string name="package_check">Check</string>
    <string name="package_taken">This name is already taken!</string>
    <string name="package_free">This name is free!</string>
    <string name="package_hint">Type your package id</string>
</resources>